idea/testData/checker/Bounds.jet
  open class A {}
  open class B<T : A>()

  abstract class C<T : B<<error>Int</error>>, X : (B<<error>Char</error>>) -> #(B<<error>Any</error>>, B<A>)>() : B<<error>Any</error>>() { // 2 errors
    val a = B<<error>Char</error>>() // error

    abstract val x : (B<<error>Char</error>>) -> B<<error>Any</error>>
  }

